ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-stack-grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: grafanaak8.surenting.com.co
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: monitoring-stack-grafana
              port:
                number: 3000
